cloud-core/kubernetes/experiments/network/ingress/v1.11/rewrite/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-rewrite
  namespace: default
spec:
  rules:
  - host: rewrite.example.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: /something
